animaciones, carrito, mejoras

--- a/ComparaYa/ComparationPage.xaml
+++ b/ComparaYa/ComparationPage.xaml
@@ -3,13 +3,14 @@
     x:Class="ComparaYa.ComparationPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Title="Compara!">
+    Title="Compara!"
+    BackgroundColor="#fdfdff">
 
-    <Grid>
+    <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="60" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="55" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -44,16 +45,16 @@
                     <Frame
                         Margin="20"
                         BackgroundColor="White"
-                        WidthRequest="81">
+                        WidthRequest="400">
                         <StackLayout VerticalOptions="FillAndExpand">
                             <Label
                                 FontFamily="PPI"
-                                FontSize="22"
+                                FontSize="15"
                                 HorizontalTextAlignment="Center"
                                 Text="{Binding nombre}"
                                 TextColor="Black" />
                             <Image
-                                HeightRequest="200"
+                                HeightRequest="150"
                                 Source="{Binding imagen_url}"
                                 WidthRequest="200" />
                             <Label
@@ -94,7 +95,7 @@
                             <Label
                                 x:Name="priceexito"
                                 FontSize="14"
-                                HorizontalOptions="CenterAndExpand"
+                                HorizontalTextAlignment="Center"
                                 VerticalOptions="End">
                                 <Label.Text>
                                     <Binding Path="precio_exito" StringFormat="Precio Exito: {0}" />
@@ -117,12 +118,12 @@
 
         <FlexLayout
             Grid.Row="2"
-            Margin="10"
+            Margin="4"
             AlignItems="Center"
             JustifyContent="Center">
             <Label
                 FontFamily="PPI"
-                FontSize="20"
+                FontSize="15"
                 HorizontalTextAlignment="Center"
                 Text="Productos similares"
                 TextColor="Black" />
@@ -131,6 +132,7 @@
         <CollectionView
             x:Name="cvAlikeProducts"
             Grid.Row="3"
+            Margin="6"
             BackgroundColor="Transparent"
             ItemsSource="{Binding AlikeProducts}">
             <CollectionView.ItemsLayout>
@@ -138,10 +140,10 @@
             </CollectionView.ItemsLayout>
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <StackLayout>
+                    <StackLayout Margin="20" VerticalOptions="FillAndExpand">
                         <Label
                             FontFamily="PPI"
-                            FontSize="22"
+                            FontSize="16"
                             HorizontalTextAlignment="Center"
                             Text="{Binding nombre}"
                             TextColor="Black" />
