--- a/ComparaYa/Views/MainTabs.xaml
+++ b/ComparaYa/Views/MainTabs.xaml
@@ -6,11 +6,12 @@
     xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
     xmlns:local="clr-namespace:ComparaYa"
     android:TabbedPage.ToolbarPlacement="Bottom"
-    BarBackgroundColor="#F9FAFC"
-    BarTextColor="#5c5c5c"
+    BarBackgroundColor=" #f4f4f4"
+    BarTextColor="Black"
     NavigationPage.HasBackButton="False"
     NavigationPage.HasNavigationBar="False">
     <!--  Pages can be added as references or inline  -->
     <local:ProductsView Title="Productos" />
+    <local:PlaneadorCompra Title="Carrito" />
     <local:UserPage Title="Usuario" />
 </TabbedPage>
